--- a/business.html
+++ b/business.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="vmaxApp">
 
 <head>
 	<meta charset="UTF-8">
@@ -17,11 +17,17 @@
 	<!-- Google Web Fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
+
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/responsive.css">
+	<link rel="stylesheet" href="css/responsive.css"> <!-- AngularJS Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="./ng/ng-main.js"></script>
+    <script src="./ng/controllers.js"></script>
+    <script src="./ng/components.js"></script>
+    <link rel="stylesheet" href="modal.css" />
 </head>
 
-<body>
+  <body ng-controller="vmaxController">
 
 	<!-- watsapp toggle -->
 
@@ -117,149 +123,9 @@
 	</section>
 	<!-- Preloader End -->
 	<!-- header Start -->
-	<header class="header-style-two">
-		<div class="header-wrapper">
-			<div class="header-top-area bg-gradient-reverse-color d-none d-lg-block">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6 header-top-left-part">
-							<span class="address"><i class="webexflaticon flaticon-placeholder-1"></i> Nssf Building
-								Nkurumah Road 4th Floor</span>
-							<span class="phone"><i class="webexflaticon flaticon-send"></i><a
-									href="mailto:info@vmax.co.ke">info@vmax.co.ke</a></span>
-						</div>
-						<div class="col-lg-6 header-top-right-part text-end">
-							<ul class="social-links">
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="fab fa-instagram"></i></a></li>
-							</ul>
-							<!-- <div class="language">
-								<a class="language-btn" href="#"><i class="webexflaticon flaticon-internet"></i> English</a>
-								<ul class="language-dropdown">
-									<li><a href="#">English</a></li>
-									<li><a href="#">Bangla</a></li>
-									<li><a href="#">French</a></li>
-									<li><a href="#">Spanish</a></li>
-									<li><a href="#">Arabic</a></li>
-								</ul>
-							</div> -->
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="header-navigation-area two-layers-header">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<a class="navbar-brand logo f-left mrt-10 mrt-md-0" href="index.html">
-								<img id="logo-image" class="img-center logo-style" src="img/LOGO.png" alt="">
-							</a>
-							<div class="mobile-menu-right"></div>
-							<div class="header-searchbox-style-two d-none d-xl-block">
-								<div class="side-panel side-panel-trigger text-end d-none d-lg-block">
-									<span class="bar1"></span>
-									<span class="bar2"></span>
-									<span class="bar3"></span>
-								</div>
-								<!-- <div class="show-searchbox">
-									<a href="#"><i class="webex-icon-Search"></i></a>
-								</div> -->
-								<!-- <div class="toggle-searchbox">
-									<form action="#" id="searchform-all" method="get">
-										<div>
-											<input type="text" id="s" class="form-control" placeholder="Search...">
-											<div class="input-box">
-												<input type="submit" value="" id="searchsubmit"><i class="fas fa-search"></i>
-											</div>
-										</div>
-									</form>
-								</div> -->
-							</div>
-							<div class="side-panel-content">
-								<div class="close-icon">
-									<button><i class="webex-icon-cross"></i></button>
-								</div>
-								<div class="side-panel-logo mrb-30">
-									<a href="index.html">
-										<img class="logo-style" src="img/LOGO.png" alt="" />
-									</a>
-								</div>
-								<div class="side-info mrb-30">
-									<div class="side-panel-element mrb-25">
-										<h4 class="mrb-10">Office Address</h4>
-										<ul class="list-items">
-											<li><span class="fa fa-map-marker-alt mrr-10 text-primary-color"></span>Nssf
-												Building Nkurumah Road 4th Floor</li>
-											<li><span class="fas fa-envelope mrr-10 text-primary-color"></span><a
-													href="mailto:info@vmax.co.ke">info@vmax.co.ke</a></li>
-											<li><span class="fas fa-phone-alt mrr-10 text-primary-color"></span>
-												<a href="tel:0705226770">+254 705 226 770</a> <br>/
-												<a href="tel:0720329069">+254 720 329 069</a> /
-												<a href="tel:0735329069">+254 735 329 069</a>
-											</li>
-										</ul>
-									</div>
-									<div class="side-panel-element mrb-30">
-										<h4 class="mrb-15">Pintarest</h4>
-										<ul class="pintarest-list">
-											<li><a href="#"><img class="img-full" src="images/side-panel/1.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/2.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/3.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/4.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/5.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/6.jpg"
-														alt=""></a></li>
-										</ul>
-									</div>
-								</div>
-								<h4 class="mrb-15">Social List</h4>
-								<ul class="social-list">
-									<li><a href="#"><i class="fab fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fab fa-instagram"></i></a></li>
-									<li><a href="#"><i class="fab fa-google-plus"></i></a></li>
-								</ul>
-							</div>
-							<div class="main-menu f-right">
-								<nav id="mobile-menu-right">
-									<ul>
-										<li class="has-sub">
-											<a href="index.html" class="hover">Home</a>
-										</li>
-										<li class="has-sub" style="border-bottom: 4px solid #FAB758;">
-											<a href="#">Covers &#8675;</a>
-											<ul class="sub-menu">
-												<li><a href="motorinsurance.html">Motor Insurance</a></li>
-												<li><a href="#" style="background: #013966; color: white;">Medical & Travel</a></li>
-												<li><a href="general.html">General Insurance</a></li>
-											</ul>
-										</li>
-										<li>
-											<a href="claimforms.html" class="hover">Claim Forms</a>
-										</li>
-										<li>
-											<a href="report.html" class="hover">Report Claim</a>
-										</li>
-										<li class="has-sub">
-											<a href="getquote.html" class="hover">Get Quote</a>
-										</li>
-										<li class="has-sub right-view">
-											<a href="contact.html" class="hover">Contact</a>
-										</li>
-									</ul>
-								</nav>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
+		<!-- header Start -->
+<div ng-include="'./ng/templates/header.component.html'" ></div>
+	<!-- header End -->
 	<!-- header End -->
 	<!-- Page Title Start -->
 	<section class="page-title-section">
