--- a/claimforms1.html
+++ b/claimforms1.html
@@ -20,15 +20,27 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="css/animate.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
-    <link rel="stylesheet" href="modal.css" />
+<link rel="stylesheet" href="css/responsive.css" />
     <!-- AngularJS Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="./ng/ng-main.js"></script>
     <script src="./ng/controllers.js"></script>
     <script src="./ng/components.js"></script>
+
+    <link rel="stylesheet" href="css/animate.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+<link rel="stylesheet" href="css/responsive.css" />
+    <!-- AngularJS Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="./ng/ng-main.js"></script>
+    <script src="./ng/controllers.js"></script>
+    <script src="./ng/components.js"></script>
+    <link rel="stylesheet" href="modal.css" />
+    
 
     <style>
       *{
