--- a/report.html
+++ b/report.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="vmaxApp">
 
 <head>
 	<meta charset="UTF-8">
@@ -17,11 +17,17 @@
 	<!-- Google Web Fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
+
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/responsive.css">
+	<link rel="stylesheet" href="css/responsive.css"> <!-- AngularJS Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="./ng/ng-main.js"></script>
+    <script src="./ng/controllers.js"></script>
+    <script src="./ng/components.js"></script>
+    <link rel="stylesheet" href="modal.css" />
 </head>
 
-<body>
+  <body ng-controller="vmaxController">
 
 	<!-- watsapp toggle -->
 
