--- a/claimforms.html
+++ b/claimforms.html
@@ -386,20 +386,14 @@ align-items: center;
                       </li>
                       <li class="has-sub">
                         <a href="#">Covers &#8675;</a>
-                        <ul
-                          class="sub-menu"
-                          style="border-top: 4px solid #fab758"
-                        >
-                          <li>
-                            <a href="motorinsurance.html">Motor Insurance</a>
-                          </li>
-                          <li>
-                            <a href="mediacalandtravel.html"
-                              >Medical & Travel</a
-                            >
-                          </li>
-                          <li><a href="general.html">General Insurance</a></li>
-                        </ul>
+                        <ul class="sub-menu" style="border-top: 4px solid #FAB758;">
+                          <li><a href="motorinsurance.html">Motor Insurance</a></li>
+                          <li><a href="medicalandtravel.html">Medical Insurance</a></li>
+                          <li><a href="medicalandtravel.html">Travel Insurance</a></li>
+                          <li><a href="general.html">Domestic Package / Home Insurance</a></li>
+                          <li><a href="general.html">Marine Insurance</a></li>
+                          <li><a href="business.html">Business Insurance</a></li>
+                          </ul>
                       </li>
                       <li>
                         <a href="#" style="border-bottom: 4px solid #fab758"
